# ChatBotPractium

./: Dockerfile  README.md  main.py  pyproject.toml  query_pipeline.py  rag_pipeline.py  requirements.txt
res/prompts/: analise_solo.txt  analise_tecido_vegetal.txt  default.txt  recomendacao_correcao.txt  recomendacao_foliares.txt  recomendacao_manutencao.txt
vector_dbs/analise_de_solo/: index.faiss  index.pkl
vector_dbs/angel/: index.faiss  index.pkl
vector_dbs/davi/: index.faiss  index.pkl
vector_dbs/fathos82/: index.faiss  index.pkl
vector_dbs/hello/: index.pkl
vector_dbs/info/: index.faiss  index.pkl
vector_dbs/jaooa/: index.pkl
vector_dbs/lucas/: index.faiss  index.pkl
vector_dbs/novo/: index.faiss  index.pkl
vector_dbs/ola/: index.faiss  index.pkl
vector_dbs/usuario/: index.faiss  index.pkl
vector_dbs/ze/: index.pkl
